force-app/main/default/objects/Historical_Data__c/fields/Accident_Impact__c.field-meta.xml
<CustomField>
    <fullName>Accident_Impact__c</fullName>
    <label>Accident Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Struck Object</fullName>
            </value>
            <value>
                <fullName>Off Road Left</fullName>
            </value>
            <value>
                <fullName>Right Angle</fullName>
            </value>
            <value>
                <fullName>Passing - Left Turn</fullName>
            </value>
            <value>
                <fullName>Left Turn- Across Path</fullName>
            </value>
            <value>
                <fullName>Sideswipe-Opposite Direction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rear-End</fullName>
            </value>
            <value>
                <fullName>Off Road Right</fullName>
            </value>
            <value>
                <fullName>Head On</fullName>
            </value>
            <value>
                <fullName>Passing- Right Turn</fullName>
            </value>
            <value>
                <fullName>Sideswipe- Same Direction</fullName>
            </value>
            <value>
                <fullName>Backing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>