force-app/main/default/objects/Historical_Data__c/fields/allegations_of_contributory_negligence__c.field-meta.xml
<CustomField>
    <fullName>allegations_of_contributory_negligence__c</fullName>
    <label>allegations of contributory negligence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Are_there_allegations_negligence__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Seatbelt</fullName>
            </value>
            <value>
                <fullName>Joint venture</fullName>
            </value>
            <value>
                <fullName>Assumption of risk (VOLENTI)</fullName>
            </value>
            <value>
                <fullName>Failure to mitigate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>