force-app/main/default/objects/Historical_Data__c/fields/Amount_that_you_would_like__c.field-meta.xml
<CustomField>
    <fullName>Amount_that_you_would_like__c</fullName>
    <label>Amount that you would like $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>