force-app/main/default/objects/Historical_Data__c/fields/Are_there_allegations_negligence__c.field-meta.xml
<CustomField>
    <fullName>Are_there_allegations_negligence__c</fullName>
    <label>Are there allegations negligence?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>