force-app/main/default/objects/Historical_Data__c/fields/Are_you_the_first_lawyer_on_this_file__c.field-meta.xml
<CustomField>
    <fullName>Are_you_the_first_lawyer_on_this_file__c</fullName>
    <label>Are you the first lawyer on this file?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>