force-app/main/default/objects/Historical_Data__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balance</label>
    <type>Checkbox</type>
</CustomField>