force-app/main/default/objects/Historical_Data__c/fields/Car_Damages__c.field-meta.xml
<CustomField>
    <fullName>Car_Damages__c</fullName>
    <label>Car Damages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Yet Determined</fullName>
            </value>
            <value>
                <fullName>Not Applicable (Pedestrian/Bicyclist)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>