force-app/main/default/objects/Historical_Data__c/fields/Cartilage_Damage__c.field-meta.xml
<CustomField>
    <fullName>Cartilage_Damage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cartilage Damage</label>
    <type>Checkbox</type>
</CustomField>