force-app/main/default/objects/Historical_Data__c/fields/Charges_were_laid_against__c.field-meta.xml
<CustomField>
    <fullName>Charges_were_laid_against__c</fullName>
    <label>Charges were laid against</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Driver of the car that hit you</fullName>
            </value>
            <value>
                <fullName>You (Claimant)</fullName>
            </value>
            <value>
                <fullName>Driver of car that you were in</fullName>
            </value>
            <value>
                <fullName>No one</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>