force-app/main/default/objects/Historical_Data__c/fields/Charges_were_laid_against_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Charges_were_laid_against_confirmed__c</fullName>
    <label>Charges were laid against confirmed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>I Can&apos;t Confirm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>