force-app/main/default/objects/Historical_Data__c/fields/Chronic_Pain__c.field-meta.xml
<CustomField>
    <fullName>Chronic_Pain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chronic Pain</label>
    <type>Checkbox</type>
</CustomField>