force-app/main/default/objects/Historical_Data__c/fields/CLAIMANT_s_regular_employment__c.field-meta.xml
<CustomField>
    <fullName>CLAIMANT_s_regular_employment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CLAIMANT&apos;s regular employment</label>
    <type>Checkbox</type>
</CustomField>