force-app/main/default/objects/Historical_Data__c/fields/CLAIMANT_s_training_or_education__c.field-meta.xml
<CustomField>
    <fullName>CLAIMANT_s_training_or_education__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CLAIMANT&apos;s training or education</label>
    <type>Checkbox</type>
</CustomField>