force-app/main/default/objects/Historical_Data__c/fields/Claimant_was__c.field-meta.xml
<CustomField>
    <fullName>Claimant_was__c</fullName>
    <label>Claimant was</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Passenger Back Seat</fullName>
            </value>
            <value>
                <fullName>Pedestrian/Bicyclist</fullName>
            </value>
            <value>
                <fullName>Motorcycle Driver</fullName>
            </value>
            <value>
                <fullName>Motorcycle Passenger</fullName>
            </value>
            <value>
                <fullName>Taxi Passenger</fullName>
            </value>
            <value>
                <fullName>Bus/Transit Passenger</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>