force-app/main/default/objects/Historical_Data__c/fields/CLAIMANTs_daily_living__c.field-meta.xml
<CustomField>
    <fullName>CLAIMANTs_daily_living__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CLAIMANT&apos;s daily living</label>
    <type>Checkbox</type>
</CustomField>