force-app/main/default/objects/Historical_Data__c/fields/Damage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Damage_Amount__c</fullName>
    <label>Damage Amount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WRITEOFF</fullName>
                <label>WRITE-OFF</label>
            </value>
            <value>
                <fullName>$ 0 - 1000</fullName>
            </value>
            <value>
                <fullName>$ 1000 - 3000</fullName>
            </value>
            <value>
                <fullName>$ 3000 - 5000</fullName>
            </value>
            <value>
                <fullName>$ 5000 - 10,000</fullName>
            </value>
            <value>
                <fullName>$ 10,000 - 20,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>