force-app/main/default/objects/Historical_Data__c/fields/Damaged_Spine_WAD_III_or_IV__c.field-meta.xml
<CustomField>
    <fullName>Damaged_Spine_WAD_III_or_IV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Damaged Spine(WAD III  or IV)</label>
    <type>Checkbox</type>
</CustomField>