force-app/main/default/objects/Historical_Data__c/fields/DEFENDENTinsurancecompanyliability__c.field-meta.xml
<CustomField>
    <fullName>DEFENDENTinsurancecompanyliability__c</fullName>
    <label>DEFENDENT/insurance company liability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Has_DEFENDENT_admitted_liability__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Written</fullName>
            </value>
            <value>
                <fullName>Verbally</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>