force-app/main/default/objects/Historical_Data__c/fields/Did_the_police_arrive__c.field-meta.xml
<CustomField>
    <fullName>Did_the_police_arrive__c</fullName>
    <label>Did the police arrive?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>