force-app/main/default/objects/Historical_Data__c/fields/Did_the_police_arrive_at_the_scene_of_th__c.field-meta.xml
<CustomField>
    <fullName>Did_the_police_arrive_at_the_scene_of_th__c</fullName>
    <label>Did the police arrive at the scene of th</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>