force-app/main/default/objects/Historical_Data__c/fields/Did_you_spend_time_in_the_hospital__c.field-meta.xml
<CustomField>
    <fullName>Did_you_spend_time_in_the_hospital__c</fullName>
    <label>Did you spend time in the hospital?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No hospital visit</fullName>
            </value>
            <value>
                <fullName>A couple of hours</fullName>
            </value>
            <value>
                <fullName>Overnight</fullName>
            </value>
            <value>
                <fullName>Two to seven days</fullName>
            </value>
            <value>
                <fullName>More than seven days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>