force-app/main/default/objects/Historical_Data__c/fields/Fatality__c.field-meta.xml
<CustomField>
    <fullName>Fatality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fatality</label>
    <type>Checkbox</type>
</CustomField>