force-app/main/default/objects/Historical_Data__c/fields/Fracture_of_Weight_Bearing_Bone_s__c.field-meta.xml
<CustomField>
    <fullName>Fracture_of_Weight_Bearing_Bone_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fracture of Weight Bearing Bone(s)</label>
    <type>Checkbox</type>
</CustomField>