force-app/main/default/objects/Historical_Data__c/fields/Fractured_Ankle_Knee__c.field-meta.xml
<CustomField>
    <fullName>Fractured_Ankle_Knee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fractured Ankle/Knee</label>
    <type>Checkbox</type>
</CustomField>