force-app/main/default/objects/Historical_Data__c/fields/Fractured_Arm_Wrist_Hand_Elbow__c.field-meta.xml
<CustomField>
    <fullName>Fractured_Arm_Wrist_Hand_Elbow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fractured Arm/Wrist/Hand/Elbow</label>
    <type>Checkbox</type>
</CustomField>