force-app/main/default/objects/Historical_Data__c/fields/Fractured_Pelvis_Hip__c.field-meta.xml
<CustomField>
    <fullName>Fractured_Pelvis_Hip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fractured Pelvis/Hip</label>
    <type>Checkbox</type>
</CustomField>