force-app/main/default/objects/Historical_Data__c/fields/Fractured_Ribs__c.field-meta.xml
<CustomField>
    <fullName>Fractured_Ribs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fractured Ribs</label>
    <type>Checkbox</type>
</CustomField>