force-app/main/default/objects/Historical_Data__c/fields/Fractured_Shoulder_Bone_Collar_Bone__c.field-meta.xml
<CustomField>
    <fullName>Fractured_Shoulder_Bone_Collar_Bone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fractured Shoulder Bone/Collar Bone</label>
    <type>Checkbox</type>
</CustomField>