force-app/main/default/objects/Historical_Data__c/fields/has_a_pre_existing_condition__c.field-meta.xml
<CustomField>
    <fullName>has_a_pre_existing_condition__c</fullName>
    <label>has a pre-existing condition?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not know at this time</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>