force-app/main/default/objects/Historical_Data__c/fields/Has_DEFENDENT_admitted_liability__c.field-meta.xml
<CustomField>
    <fullName>Has_DEFENDENT_admitted_liability__c</fullName>
    <label>Has DEFENDENT  admitted liability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>