force-app/main/default/objects/Historical_Data__c/fields/Has_Insurance_Co_provided_a_settlement__c.field-meta.xml
<CustomField>
    <fullName>Has_Insurance_Co_provided_a_settlement__c</fullName>
    <label>Has Insurance Co. provided a settlement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>