force-app/main/default/objects/Historical_Data__c/fields/have_you_missed_tme_from_work__c.field-meta.xml
<CustomField>
    <fullName>have_you_missed_tme_from_work__c</fullName>
    <label>As a result of this accident, have you m</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>