force-app/main/default/objects/Historical_Data__c/fields/Hearing__c.field-meta.xml
<CustomField>
    <fullName>Hearing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hearing</label>
    <type>Checkbox</type>
</CustomField>