force-app/main/default/objects/Historical_Data__c/fields/history_of_following_medical_advice__c.field-meta.xml
<CustomField>
    <fullName>history_of_following_medical_advice__c</fullName>
    <label>history of following medical advice?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Not known</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>