force-app/main/default/objects/Historical_Data__c/fields/How_long_have_you_lived_at_your_current__c.field-meta.xml
<CustomField>
    <fullName>How_long_have_you_lived_at_your_current__c</fullName>
    <label>How long have you lived at your current</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 3 Months</fullName>
            </value>
            <value>
                <fullName>&lt; 1 Year</fullName>
            </value>
            <value>
                <fullName>&lt; 2 Years</fullName>
            </value>
            <value>
                <fullName>&lt; 5 Years</fullName>
            </value>
            <value>
                <fullName>5 Years +</fullName>
            </value>
            <value>
                <fullName>Not known</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>