force-app/main/default/objects/Historical_Data__c/fields/If_yes_approx_lost_wages_to_date__c.field-meta.xml
<CustomField>
    <fullName>If_yes_approx_lost_wages_to_date__c</fullName>
    <label>If yes, approx lost wages to date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>