force-app/main/default/objects/Historical_Data__c/fields/Internal_Organ_Damage__c.field-meta.xml
<CustomField>
    <fullName>Internal_Organ_Damage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Organ Damage</label>
    <type>Checkbox</type>
</CustomField>