force-app/main/default/objects/Historical_Data__c/fields/Jaw_TMJ__c.field-meta.xml
<CustomField>
    <fullName>Jaw_TMJ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jaw (TMJ)</label>
    <type>Checkbox</type>
</CustomField>