force-app/main/default/objects/Historical_Data__c/fields/Latest_offer_amount__c.field-meta.xml
<CustomField>
    <fullName>Latest_offer_amount__c</fullName>
    <label>Latest offer amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>