force-app/main/default/objects/Historical_Data__c/fields/Lawyer_Date_of_Accident__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Date_of_Accident__c</fullName>
    <label>Date of Accident</label>
    <type>Date</type>
</CustomField>