force-app/main/default/objects/Historical_Data__c/fields/Length_of_Hospital_Stay__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Hospital_Stay__c</fullName>
    <label>Length of Hospital Stay</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No hospital visit</fullName>
            </value>
            <value>
                <fullName>A couple of hours</fullName>
            </value>
            <value>
                <fullName>Overnight</fullName>
            </value>
            <value>
                <fullName>Two to seven days</fullName>
            </value>
            <value>
                <fullName>More than seven days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>