force-app/main/default/objects/Historical_Data__c/fields/liability_satisfaction__c.field-meta.xml
<CustomField>
    <fullName>liability_satisfaction__c</fullName>
    <label>liability satisfaction?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>