force-app/main/default/objects/Historical_Data__c/fields/Loss_of_Arm__c.field-meta.xml
<CustomField>
    <fullName>Loss_of_Arm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loss of Arm</label>
    <type>Checkbox</type>
</CustomField>