force-app/main/default/objects/Historical_Data__c/fields/Loss_of_Foot_Toe__c.field-meta.xml
<CustomField>
    <fullName>Loss_of_Foot_Toe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loss of Foot/Toe</label>
    <type>Checkbox</type>
</CustomField>