force-app/main/default/objects/Historical_Data__c/fields/Loss_of_Hand_Finger_s_Thumb_s__c.field-meta.xml
<CustomField>
    <fullName>Loss_of_Hand_Finger_s_Thumb_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loss of Hand/Finger(s)/Thumb(s)</label>
    <type>Checkbox</type>
</CustomField>