force-app/main/default/objects/Historical_Data__c/fields/Loss_of_Leg__c.field-meta.xml
<CustomField>
    <fullName>Loss_of_Leg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loss of Leg</label>
    <type>Checkbox</type>
</CustomField>