force-app/main/default/objects/Historical_Data__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Historical Data</relationshipLabel>
    <relationshipName>Historical_Data</relationshipName>
    <type>Lookup</type>
</CustomField>