force-app/main/default/objects/Historical_Data__c/fields/Other_Treatment_Giver_s__c.field-meta.xml
<CustomField>
    <fullName>Other_Treatment_Giver_s__c</fullName>
    <label>Other Treatment Giver(s)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes, and avaliable on request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>