force-app/main/default/objects/Historical_Data__c/fields/Paralysis__c.field-meta.xml
<CustomField>
    <fullName>Paralysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paralysis</label>
    <type>Checkbox</type>
</CustomField>