force-app/main/default/objects/Historical_Data__c/fields/Permanent_Impairment_to_Arm_Hand_Elbow__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Impairment_to_Arm_Hand_Elbow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permanent Impairment to Arm/Hand/Elbow</label>
    <type>Checkbox</type>
</CustomField>