force-app/main/default/objects/Historical_Data__c/fields/Permanent_Impairment_to_Leg_Foot__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Impairment_to_Leg_Foot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permanent Impairment to Leg/Foot</label>
    <type>Checkbox</type>
</CustomField>