force-app/main/default/objects/Historical_Data__c/fields/Police_Arrive_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Police_Arrive_Confirmed__c</fullName>
    <label>Police Arrive Confirmed ?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Did_the_police_arrive__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>I Can&apos;t Confirm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>