force-app/main/default/objects/Historical_Data__c/fields/Police_Report__c.field-meta.xml
<CustomField>
    <fullName>Police_Report__c</fullName>
    <label>Police Report #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>