force-app/main/default/objects/Historical_Data__c/fields/Police_Report_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Police_Report_Confirmed__c</fullName>
    <label>Police Report Confirmed ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>I Can&apos;t Confirm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>