force-app/main/default/objects/Historical_Data__c/fields/Psychological_Emotional__c.field-meta.xml
<CustomField>
    <fullName>Psychological_Emotional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Psychological/Emotional</label>
    <type>Checkbox</type>
</CustomField>