force-app/main/default/objects/Historical_Data__c/fields/Rhino_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Rhino_Loan_Number__c</fullName>
    <label>Rhino Loan Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>