force-app/main/default/objects/Historical_Data__c/fields/Serious_Laceration_s_Scar_s_Burn_s__c.field-meta.xml
<CustomField>
    <fullName>Serious_Laceration_s_Scar_s_Burn_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serious Laceration(s)/Scar(s)/Burn(s)</label>
    <type>Checkbox</type>
</CustomField>